# postgres-homeworks

./: README.md  pyproject.toml
homework-1/: README.md  create_tables.sql  main.py
homework-2/: README.md  filter_sorting.sql  groupby.sql  northwind_script.sql  simple_queries.sql
homework-3/: README.md  queries.sql
homework-4/: README.md  alter_northwind.sql  alter_student.sql
